plugin upgraded to Jira 7 :)